<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.popularmovies.CreditsActivity"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/credits_tmdb_logo"
        android:layout_width="@dimen/no_margin"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/normal_margin"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:contentDescription="@string/credits_tmdb_logo_cont_descr"
        android:src="@drawable/themoviedb_logo"
        app:layout_constraintBottom_toTopOf="@+id/credits_disclaimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/credits_disclaimer"
        android:layout_width="@dimen/no_margin"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/normal_margin"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:text="@string/credits_tmdb"
        android:textColor="@android:color/black"
        android:textSize="@dimen/credits_disclaimer"
        app:layout_constraintBottom_toTopOf="@+id/credits_tmbd_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/credits_tmdb_logo" />

    <TextView
        android:id="@+id/credits_tmbd_link"
        android:layout_width="@dimen/no_margin"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:autoLink="web"
        android:text="@string/credits_tmdb_link"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="@dimen/credits_disclaimer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/credits_disclaimer" />

</android.support.constraint.ConstraintLayout>
